@@ -322,7 +322,7 @@ zxcf_to_snapshot( libspectrum_snap *snap )
 
   for( i = 0; i < ZXCF_PAGES; i++ ) {
 
-    buffer = malloc( ZXCF_PAGE_LENGTH * sizeof( libspectrum_byte ) );
+    buffer = libspectrum_new( libspectrum_byte, ZXCF_PAGE_LENGTH );
     if( !buffer ) {
       ui_error( UI_ERROR_ERROR, "Out of memory at %s:%d", __FILE__, __LINE__ );
       return;
